Create slim Docker image